base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: transaction-service
  namespace: transaction
  labels:
    app: transaction-service
spec:
  replicas: 5
  selector:
    matchLabels:
      app: transaction-service
  template:
    metadata:
      labels:
        app: transaction-service
    spec:
      containers:
      - name: transaction-service
        image: himanshusuman/transaction-service:v7
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            memory: "512Mi"
            cpu: "200m"
          limits:
            memory: "768Mi"
            cpu: "500m"
  strategy:
    canary:
      canaryService: transaction-service-canary
      stableService: transaction-service-stable
      trafficRouting:
        ingress:
          stableIngress: transaction-ingress
      steps:
        - setWeight: 20
        - pause: {duration: 30s}
        - setWeight: 40
        - pause: {duration: 30s}
        - setWeight: 60
        - pause: {duration: 30s}
        - setWeight: 80
        - pause: {duration: 30s}
