base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  labels:
    app: transaction-service
spec:
  selector:
    app: transaction-service
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service-canary
  labels:
    app: transaction-service
    role: canary
spec:
  selector:
    app: transaction-service
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service-stable
  labels:
    app: transaction-service
    role: stable
spec:
  selector:
    app: transaction-service
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
